fixed view on homepage, fixed contrast text on objectOverview

--- a/src/components/ObjectOverview/ObjectOverview.scss
+++ b/src/components/ObjectOverview/ObjectOverview.scss
@@ -22,6 +22,8 @@
     }
 
     &-info {
+        background-color: rgba(0, 0, 0, 0.479);
+        padding: 0 2rem;
         margin: 0 2rem;
         width: 35%;
 
