--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -48,10 +48,9 @@
   }
 
   &__section-playlists {
-    height: 100vh;
     width: 100%;
     max-width: 120rem;
-    margin: 0 auto;
+    margin: 3rem auto 10rem;
 
     .text--big-space {
       color: black;
@@ -63,13 +62,9 @@
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    padding-top: 3rem;
+    padding-bottom: 10rem;
     width: 100%;
-
-    &-content {
-      max-width: 120rem;
-      margin: 0 auto;
-    }
 
     .cta-button--wrapper {
       margin-top: 13rem;
